# safhe_house

./: Cargo.toml  README.md
src/: lib.rs
src/math/: discrete_gaussian.rs  fft.rs  finite_field.rs  finite_field_ops.rs  karatsuba.rs  ring.rs  statistics.rs  toom_cook.rs  util.rs
src/math/polymul/: fft.rs  karatsuba.rs  ntt.rs  school_book.rs  toom_cook.rs
src/math/ring/: ring.rs  ring_no_mod.rs  ring_rand.rs  zq_quotient_ring.rs
src/schemes/: bfv.rs  scheme.rs
src/schemes/bfv/: bfv.rs  ciphertext.rs  ops.rs  params.rs  plaintext.rs  public_key.rs  relinearisation.rs  secret_key.rs
src/scripts/: gen_modulus.sage  gen_modulus.sage.py  gen_modulus2.sage  gen_modulus2.sage.py  plot_benchmarks.py
src/tests/: bfv_tests.rs  fft_tests.rs  finite_field_tests.rs  karatsuba_tests.rs  math_tests.rs  ntt_tests.rs  ring_tests.rs  schoolbook_tests.rs  toom_cook_tests.rs
src/tests/discrete_gaussian/: discrete_gaussian_plot.py  discrete_gaussian_tests.rs
