[package]
name = "safhe_house"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
pyo3 = {version = "0.22.2", features = ["extension-module"] } 
num = "0.4.3"
num-bigint = {version = "0.4.6", features = ["rand"]}
num-traits = "0.2"
rayon = "1.10.0"
lazy_static = "1.5.0"
rug = "1.26.1"

[[test]]
name = "bfv_tests" 
path = "src/tests/bfv_tests.rs" 

[[test]]
name = "math_tests" 
path = "src/tests/finite_field_tests.rs"

[[test]]
name = "fft_tests" 
path = "src/tests/fft_tests.rs"

[[test]]
name = "ring_tests" 
path = "src/tests/ring_tests.rs"

[[test]]
name = "karatsuba_tests" 
path = "src/tests/karatsuba_tests.rs"

[profile.release]
debug = true 