[package]
name = "safhe_house"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
pyo3 = {version = "0.22.2", features = ["extension-module"] } 
num = "0.4.3"
rayon = "1.10.0"
lazy_static = "1.5.0"
rug = "1.26.1"
csv = "1.1"

[[test]]
name = "bfv_tests" 
path = "src/tests/bfv_tests.rs" 

[[test]]
name = "math_tests" 
path = "src/tests/finite_field_tests.rs"

[[test]]
name = "ntt_tests" 
path = "src/tests/ntt_tests.rs"

[[test]]
name = "ring_tests" 
path = "src/tests/ring_tests.rs"

[[test]]
name = "karatsuba_tests" 
path = "src/tests/karatsuba_tests.rs"

[[test]]
name = "fft_tests"
path = "src/tests/fft_tests.rs"

[[test]]
name = "toom_cook_tests" 
path = "src/tests/toom_cook_tests.rs"

[[test]]
name = "schoolbook_tests" 
path = "src/tests/schoolbook_tests.rs" 

[[bin]]
name = "param_generation"
path = "src/bin/param_gen.rs"

[[bin]]
name = "poly_mul_benchmarks" 
path = "src/bin/benches/poly_mul_benchmarks.rs"

[[bin]]
name = "scheme_benchmarks" 
path = "src/bin/benches/scheme_benchmarks.rs"

[profile.release]
debug = true 